cmake_minimum_required(VERSION 3.8)
project(Atrium VERSION 0.1)

option(USE_RXT_SUBDIR "Use Rxt as subdirectory instead of package" OFF)

set(CMAKE_FIND_USE_PACKAGE_REGISTRY FALSE)

# Global options
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/bin)

add_subdirectory(src)
